[workspace]
resolver = "2"
members = [
    "wild-doc",
    "wild-doc-server",
    "wild-doc-client-lib",
    "wild-doc-webserver",
    "wild-doc-script",
    "wild-doc-script-deno",
    "wild-doc-script-python"
]

[workspace.dependencies]
hashbrown = "0.14.0"
parking_lot = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive" , "rc"] }
serde_json = "1.0"
toml = "0.8"
indexmap = { version = "2.1", features = ["serde"] }
async-trait = "0.1"