[workspace]
resolver = "2"
members = [
    "wild-doc",
    "wild-doc-server",
    "wild-doc-client-lib",
    "wild-doc-webserver",
    "wild-doc-script",
    "wild-doc-script-deno",
    "wild-doc-script-python",
    "wild-doc-script-image",
]

[workspace.dependencies]
hashbrown = "0.14.3"
parking_lot = "0.12.1"
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
toml = "0.8.8"
indexmap = { version = "2.1.1", features = ["serde"] }
async-trait = "0.1.74"
futures = "0.3.29"

semilattice-database-session = { version = "0.47.0" }

wild-doc-script = { version = "0.30.0", path = "wild-doc-script" }
wild-doc = { version = "0.108.0", path = "wild-doc" }
