[package]
name = "wild-doc-client-lib"
version = "0.3.4"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "client lib for wild-doc-server"

repository = "https://github.com/OdenShirataki/wild-doc"

keywords = ["database","javascript","v8","xml","html"]
categories = ["database","network-programming","template-engine"]

license = "MIT/Apache-2.0"

[dependencies]
hashbrown.workspace = true