[package]
name = "wild-doc-script-deno"
version = "0.20.12"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "deno for wild-doc"

repository = "https://github.com/OdenShirataki/wild-doc"

license = "MIT/Apache-2.0"

keywords = ["database", "xml", "html", "javascript", "TypeScript"]
categories = [
    "database",
    "database-implementations",
    "text-processing",
    "web-programming",
    "template-engine",
]

[features]
docsrs = []

[dependencies]
parking_lot.workspace = true
indexmap.workspace = true
futures.workspace = true

wild-doc-script.workspace = true

ring = "0.17.7"
deno_runtime = { version = "0.147.0" }
deno_ast = { version = "0.34.0", features = ["transpiling"] }

[build-dependencies]
deno_runtime = "0.147.0"
