[package]
name = "wild-doc-script-python"
version = "0.4.1"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "python for wild-doc"

repository = "https://github.com/OdenShirataki/wild-doc"

license = "MIT/Apache-2.0"

keywords = ["database","xml","html","Python"]
categories = ["database","database-implementations","text-processing","web-programming","template-engine"]

[dependencies]
wild-doc-script = { version = "0.6", path = "../wild-doc-script" }

[dependencies.pyo3]
version = "0.19.2"
features = ["auto-initialize"]