[package]
name = "wild-doc-script"
version = "0.5.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "trait for wild-doc script"

repository = "https://github.com/OdenShirataki/wild-doc"

license = "MIT/Apache-2.0"

keywords = ["database","xml","html"]
categories = ["database","database-implementations","text-processing","web-programming","template-engine"]

[dependencies]
indexmap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bson.workspace = true