[package]
name = "wild-doc-server"
version = "0.13.3"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "wild-doc server"

repository = "https://github.com/OdenShirataki/wild-doc"

keywords = ["database", "javascript", "v8", "xml", "html"]
categories = [
    "database-implementations",
    "network-programming",
    "template-engine",
]

license = "MIT/Apache-2.0"

[dependencies]
hashbrown.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true

wild-doc-script.workspace = true

wild-doc = { version = "0.104", path = "../wild-doc", features = [
    "js",
    "py",
    "image",
] }
