[package]
name = "wild-doc-webserver"
version = "0.4.1"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "This is still in development."

repository = "https://github.com/OdenShirataki/wild-doc"

keywords = ["database","javascript","v8","xml","html"]
categories = ["database-implementations","web-programming","template-engine"]

license = "MIT/Apache-2.0"

[dependencies]
hyper = {version="0.14",features=["server"]}
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
rustls = "0.21"
rustls-pemfile="1.0"
hyper-rustls = "0.24"
tokio-rustls = "0.24"
futures = "0.3"
futures-util = "0.3"
toml = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
once_cell = "1.17"
bytes = "1.4"
multer = "2"
serde-querystring = "0.2"
urlencoding = "2"
base64 = "0.21"
wild-doc-client-lib={version="0",path="../wild-doc-client-lib"}