[package]
name = "wild-doc"
version = "0.87.7"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "You can read and write data using XML and output various structured documents.You can also program using javascript/TypeScript.It's Deno compatible.And you can optionally use python."

repository = "https://github.com/OdenShirataki/wild-doc"

license = "MIT/Apache-2.0"

keywords = ["database","javascript","TypeScript","xml","html"]
categories = ["database","database-implementations","text-processing","web-programming","template-engine"]

[features]
default = [ "js" ]
js = [ "wild-doc-script-deno" ]
py = [ "wild-doc-script-python" ]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

anyhow = "1.0"
maybe_xml = "0.3"
chrono = "0.4"

semilattice-database-session = { version = "0.18", path = "../../semilattice-database/semilattice-database-session" }

wild-doc-script = { version = "0.2", path = "../wild-doc-script" }

[dependencies.wild-doc-script-deno]
version = "0.1"
path = "../wild-doc-script-deno"
optional = true

[dependencies.wild-doc-script-python]
version = "0.1"
path = "../wild-doc-script-python"
optional = true