[package]
name = "wild-doc"
version = "0.106.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "You can read and write data using XML and output various structured documents.You can also program using javascript/TypeScript.It's Deno compatible.And you can optionally use python."

repository = "https://github.com/OdenShirataki/wild-doc"

license = "MIT/Apache-2.0"

keywords = ["database", "javascript", "TypeScript", "xml", "html"]
categories = [
    "database",
    "database-implementations",
    "text-processing",
    "web-programming",
    "template-engine",
]

[features]
default = ["js"]
js = ["wild-doc-script-deno"]
py = ["wild-doc-script-python"]
image = ["wild-doc-script-image"]

[dependencies]
hashbrown.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
indexmap.workspace = true
anyhow.workspace = true
futures.workspace = true

semilattice-database-session.workspace = true

wild-doc-script.workspace = true

chrono = "0.4.31"
base64 = "0.21.5"
maybe_xml = "0.10.1"
async-recursion = "1.0"
tokio = "1.33"

[dependencies.wild-doc-script-deno]
version = "0.20"
path = "../wild-doc-script-deno"
optional = true

[dependencies.wild-doc-script-python]
version = "0.18"
path = "../wild-doc-script-python"
optional = true

[dependencies.wild-doc-script-image]
version = "0.0"
path = "../wild-doc-script-image"
optional = true
